--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-on-netlify",
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "eslint-config-next": "13.0.2",
     "jwt-decode": "^3.1.2",
     "next": "13.0.2",
+    "next-on-netlify": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
