--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,10 +19,8 @@
     "eslint-config-next": "13.0.2",
     "jwt-decode": "^3.1.2",
     "next": "13.0.2",
-    "next-on-netlify": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.6.0",
     "typescript": "4.8.4",
     "uuidv4": "^6.2.13",
